--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "echo \"This template does not include a test runner by default.\" && exit 1"
+    "test": "web-test-runner \"src/**/*.test.jsx\""
   },
   "devDependencies": {
+    "@snowpack/web-test-runner-plugin": "^0.2.2",
+    "@testing-library/react": "^11.2.6",
+    "@web/test-runner": "^0.13.3",
+    "chai": "4.3.4",
     "snowpack": "^3.3.7"
   },
   "dependencies": {
+    "loupe": "^2.3.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sinon": "^15.0.1"
   }
 }
